# edconard-chatbot

./: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  Makefile  README.md  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy.yml
admin/: package-lock.json  pnpm-lock.yaml
admin/client/: config.ts
alembic/: env.py
alembic/versions/: 0de112ba26b4_update_relationships.py  164375136762_update_database_to_add_workspace_model.py  23c2a90ad618_merge_heads.py  3a60c2715079_initial_migration.py  3ac1f3263e3a_initial_migration.py  4db18e888071_update_thread_and_message_schema_to_.py  56cb7a903bfd_update_database_to_add_workspace_model.py  79eacefb83cd_update_email_template_and_update_otp_.py  7e09b1120496_update_database_to_add_workspace_model.py  822f730fb8d2_update_relationships.py  82e7160f4a2e_added_backprops_for_user_s_role_and_.py  9a16c5791d86_initial_migration.py  a3b4a915521d_update_message_schema.py  b450e1882a1d_initial_migration.py  c3868b81915a_added_backprops_for_user_s_role_and_.py  d12922852875_added_email_template_and_update_otp_.py  e4f9b8aaf148_added_backprops_for_user_s_role.py  e66c0df2104a_update_relationships.py  fe971527672c_update_relationships.py
config/: .env  gcp.json  loaders.yaml
core/: README.md  pyproject.toml
core/alembic/: env.py
core/alembic/versions/: c1f54cdb5362_initial_migration.py
core/common/datasources/: datasource.py  oracle.py  postgres.py  redis.py
core/common/models/: base.py
core/common/services/: address.py  chat.py  credential.py  otp.py  role.py  service.py  tenant.py  user.py
core/common/utils/: config.py  encryption.py  logger.py  opentelemetry.py  rabbitmq.py
core/common/utils/formatters/: datetime.py
core/common/utils/ocds/: generator.py
create_llama/backend/: main.py  pyproject.toml
create_llama/frontend/: .eslintrc.json  middleware.ts  next.config.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
images/: image_batch.jsonl  image_summaries.jsonl
images/$10_Trillion_in_US_Treasuries_Coming_to_the_Market_in_2024/: image_description.txt
images/$75,000_for_a_Baby_South_Korean_Businesses_Float_Incentives_As_Demographic_Crisis_Looms/: image_description.txt
images/1.54_million_Total_Housing_Completions_in_2023_including_Manufactured_Homes;_Most_Since_2007/: image_description.txt
images/10,000_Migrant_Crossings_a_Day_Upend_the_US_Presidential_Election/: image_description.txt
images/10_Facts_About_the_US_Treasury_Market_Monitoring_Demand_For_US_Government_Debt/: image_description.txt
images/10s_and_Fed_Expectations/: image_description.txt
images/1_in_3_A_Record_Share_of_Young_Adults_Will_Never_Marry/: image_description.txt
images/1_in_5_Young_Chinese_Is_Jobless,_and_Millions_More_Are_About_to_Graduate/: image_description.txt
images/2021_North_American_Heatwave_Amplified_by_Climate_Change-Driven_Nonlinear_Interactions/: image_description.txt
images/2022_Review_How_Republicans_Lost_Despite_Winning_the_Popular_Vote/: image_description.txt
images/2023_Chart_Book_Examines_Spending,_Taxes,_and_Deficits/: image_description.txt
images/2023_Letter/: image_description.txt
images/2023_Long-Term_Reliability_Assessment/: image_description.txt
images/2023_Private_Equity_Fundamentals/: image_description.txt
images/2024_Mid-Year_Outlook_An_Unstable_Economic_Equilibrium/: image_description.txt
images/2024_Outlook_What’s_Next_After_the_“Fed_Pivot”_/: image_description.txt
images/2024_US_Economic_Outlook_Final_Descent/: image_description.txt
images/2024_US_Equity_Outlook_“All_You_Had_To_Do_Was_Stay”/: image_description.txt
images/22_Top_Fiscal_Charts_of_2022/: image_description.txt
images/23%_Increase_in_Treasury_Auction_Sizes_in_2024/: image_description.txt
images/26_Empire_State_Buildings_Could_Fit_Into_New_York’s_Empty_Office_Space._That’s_a_Sign/: image_description.txt
images/2H2024_More_Continuity,_No_Major_Course_Correction/: image_description.txt
images/31%_of_All_US_Government_Debt_Outstanding_Matures_within_12_Months/: image_description.txt
images/40%_of_Companies_in_Russell_2000_Have_Negative_Earnings/: image_description.txt
images/40_Percent_of_Liberal_Professors_Are_Afraid_They_ll_Lose_Their_Jobs_Over_a_Misunderstanding/: image_description.txt
images/7_or_493_stocks_What_Matters_for_the_S&P_500_/: image_description.txt
images/ACT_Scores_Fell_for_Class_of_2023,_Sixth_Consecutive_Decline/: image_description.txt
src/: schema.py
static/: 404.html  chat.html  chat.txt  index.html  index.txt
(+2698 files in other folders)
