[tool.poetry]
name = "rag-box"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.1"
python-dotenv = "^1.0.0"
llama-index = "0.10.41"
llama-index-core = "0.10.41"
llama-index-agent-openai = "0.2.5"
uvicorn = { version = "^0.23.2", extras = [ "standard" ] }
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
aiostream = "^0.5.2"
llama-index-vector-stores-chroma = "^0.1.8"
llama-index-embeddings-gemini = "^0.1.6"
llama-index-llms-gemini = "^0.1.10"
llama-index-llms-ollama = "^0.1.3"
llama-index-embeddings-ollama = "^0.1.2"
llama-index-tools-wikipedia = "^0.1.3"
llama-index-tools-duckduckgo = "^0.1.1"
llama-index-vector-stores-qdrant = "^0.2.8"
ollama = "^0.2.0"
llama-index-llms-azure-openai = "^0.1.8"
llama-index-embeddings-azure-openai = "^0.1.9"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
aioredis = "^2.0.1"
redis = "^5.0.5"
sqlalchemy = "^2.0.30"
opentelemetry-exporter-otlp = "^1.25.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.25.0"
opentelemetry-instrumentation = "^0.46b0"
opentelemetry-instrumentation-logging = "^0.46b0"
pika = "^1.3.2"
git-filter-repo = "^2.38.0"
python-jose = "^3.3.0"
httpx = "^0.27.0"
pydantic = {extras = ["email"], version = "^2.7.4"}
jinja2 = "^3.1.4"
resend = "^2.1.0"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
