[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["kaponda mulambia <44966170+kmulambia@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
asyncpg = "^0.29.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-exporter-otlp = "^1.25.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.25.0"
requests = "^2.32.3"
opentelemetry-instrumentation = "^0.46b0"
opentelemetry-instrumentation-logging = "^0.46b0"
prometheus-fastapi-instrumentator = "^7.0.0"
greenlet = "^3.0.3"
fastapi-limiter = "^0.1.6"
aioredis = "^2.0.1"
redis = "^5.0.5"
oracledb = "^2.2.1"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
